--- a/MediaProjection/src/main/AndroidManifest.xml
+++ b/MediaProjection/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
 
     <!-- Android 9.0上使用前台服务，需要添加权限 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application>
 
         <service
