--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext {
         var = [
                 // SDK And Tools
-                applicationId          : "com.mask.mediaprojectionlibrary",
+                applicationId          : "com.nolovr.nolohome.core",
                 compileSdkVersion      : 29,
                 minSdkVersion          : 21,
                 targetSdkVersion       : 29,
@@ -27,7 +27,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         
 
         // NOTE: Do not place your application dependencies here; they belong
