--- a/MediaProjection/build.gradle
+++ b/MediaProjection/build.gradle
@@ -12,4 +12,5 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.annotation:annotation:1.3.0'
 }
