--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mask.mediaprojectionlibrary">
+    package="com.mask.mediaprojectionlibrary"
+    android:sharedUserId="android.uid.system">
 
-<!--    android:sharedUserId="android.uid.system"-->
+    <!--    android:sharedUserId="android.uid.system"-->
 
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />
 
     <application
@@ -19,6 +21,8 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                <category android:name="com.nibiru.intent.category.PERMISSIONS_AUTO_GRANT" />
             </intent-filter>
         </activity>
     </application>
